--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,7 +16,7 @@
 -->
 <resources>
 
-    <string name="app_name">GCM Demo</string>
+    <string name="app_name">Jacker Tracker app</string>
     <string name="send">Send</string>
     <string name="clear">Clear</string>
     <string name="title_activity_alert">Alert</string>
